--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Disney Api</title>
+    <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+/>
+<script src="https://code.highcharts.com/highcharts.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
